<resources>
    <string name="app_name">EchoWii Radio Controller</string>

    <string name="button_channel_a">Button A</string>
    <string name="button_channel_b">Button B</string>
    <string name="button_channel_c">Button C</string>
    <string name="button_channel_d">Button D</string>
    <string name="button_channel_e">Button E</string>
    <string name="button_channel_f">Button F</string>
    <string name="button_channel_g">Button G</string>

</resources>
