<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/carbon_fibre"
    tools:context=".FullscreenActivity">

    <!--&lt;!&ndash; The primary full-screen view. This can be replaced with whatever view-->
         <!--is needed to present your content, e.g. VideoView, SurfaceView,-->
         <!--TextureView, etc. &ndash;&gt;-->
    <!--<TextView android:id="@+id/fullscreen_content"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:keepScreenOn="true"-->
        <!--android:textColor="#33b5e5"-->
        <!--android:textStyle="bold"-->
        <!--android:textSize="50sp"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/dummy_content" />-->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/button_panels"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:background="@color/overlay_button_panel"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/button_channel_a"
                style="?metaButtonBarButtonStyle"
                android:layout_width="100dp"
                android:hapticFeedbackEnabled="true"
                android:layout_height="80dp"
                android:text="@string/button_channel_a" />

            <Button
                android:id="@+id/button_channel_b"
                style="?metaButtonBarButtonStyle"
                android:layout_toEndOf="@+id/button_channel_a"
                android:layout_marginLeft="10dp"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/button_channel_b" />

            <Button
                android:id="@+id/button_channel_c"
                style="?metaButtonBarButtonStyle"
                android:layout_toEndOf="@+id/button_channel_b"
                android:layout_marginLeft="10dp"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/button_channel_c" />

            <Button
                android:id="@+id/button_channel_d"
                style="?metaButtonBarButtonStyle"
                android:layout_toEndOf="@+id/button_channel_c"
                android:layout_marginLeft="10dp"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/button_channel_d" />

            <Button
                android:id="@+id/button_channel_e"
                style="?metaButtonBarButtonStyle"
                android:layout_toEndOf="@+id/button_channel_d"
                android:layout_marginLeft="10dp"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/button_channel_e" />

            <Button
                android:id="@+id/button_channel_f"
                style="?metaButtonBarButtonStyle"
                android:layout_toEndOf="@+id/button_channel_e"
                android:layout_marginLeft="10dp"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/button_channel_f" />


        </RelativeLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/joystick_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            tools:ignore="UselessParent">

            <RelativeLayout
                android:id="@+id/layout_joystick_left"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:background="@drawable/image_button_bg">
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_joystick_right"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/image_button_bg">
            </RelativeLayout>
        </RelativeLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/message_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/textview_console"
                android:layout_toEndOf="@+id/textview_brandname"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CONSOLE MESSAGE"/>

            <TextView
                android:id="@+id/textview_x"
                android:layout_toEndOf="@+id/textview_console"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="X"/>

            <TextView
                android:id="@+id/textview_y"
                android:layout_toEndOf="@+id/textview_x"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Y"/>

            <TextView
                android:id="@+id/textview_angle"
                android:layout_toEndOf="@+id/textview_y"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ANGLE"/>

            <TextView
                android:id="@+id/textview_distance"
                android:layout_toEndOf="@+id/textview_angle"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"/>

            <TextView
                android:id="@+id/textview_brandname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:keepScreenOn="true"
                android:text="EchoWii Radio Control"/>

        </RelativeLayout>
    </FrameLayout>

</FrameLayout>